--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -29,9 +29,21 @@
         }
 
         .app {
+            position: relative;
             display: flex;
             align-items: center;
             margin-bottom: 16px;
+        }
+
+        .app:not(:last-child)::after {
+            content: '';
+            position: absolute;
+            bottom: -8px;
+            right: 0;
+            width: calc(100% - 64px - 12px);
+            height: 1px;
+            background: darkgrey;
+            opacity: 0.2;
         }
 
         .app > .icon {
@@ -45,14 +57,12 @@
 
         .app > .info {
             flex: 1;
-            align-self: flex-start;
-            padding: 8px;
+            padding: 0 12px;
             overflow: hidden;
         }
 
         .app > .info > .name {
-            font-size: 20px;
-            /* font-weight: bold; */
+            font-size: 18px;
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
