--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -25,25 +25,20 @@
         }
 
         #apps {
+            text-align: center;
             padding: 12px;
         }
 
         .app {
             position: relative;
-            display: flex;
+            display: inline-flex;
+            width: 340px;
             align-items: center;
-            margin-bottom: 16px;
-        }
-
-        .app:not(:last-child)::after {
-            content: '';
-            position: absolute;
-            bottom: -8px;
-            right: 0;
-            width: calc(100% - 64px - 12px);
-            height: 1px;
-            background: darkgrey;
-            opacity: 0.2;
+            margin: 8px;
+            padding: 8px;
+            text-align: left;
+            border: 1px solid rgb(168, 168, 168, 0.2);
+            border-radius: 12px;
         }
 
         .app > .icon {
@@ -90,6 +85,27 @@
 
         .app > .install::before {
             content: 'GET';
+        }
+
+        @media only screen and (max-width: 768px) {
+            .app {
+                display: flex;
+                width: auto;
+                margin: 0 0 16px 0;
+                padding: 0;
+                border: none;
+            }
+
+            .app:not(:last-child)::after {
+                content: '';
+                position: absolute;
+                bottom: -8px;
+                right: 0;
+                width: calc(100% - 64px - 12px);
+                height: 1px;
+                background: darkgrey;
+                opacity: 0.2;
+            }
         }
 
         @media (prefers-color-scheme: dark) {
