--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -152,7 +152,7 @@
             document.getElementById('help').addEventListener('click', () => {
                 if (window.confirm([
                     'Having trouble installing apps?',
-                    'The signature of the app you are trying to install maybe expired or wasn\'t even correct in the first place. Check your binary or ask the developer in charge.',
+                    'The signature of the app you are trying to install may be expired or wasn\'t even correct in the first place. Check your binary or ask the developer in charge.',
                     'If you are trying to install an Enterprise signed app, you may need to trust the company in the Settings app. Check out Apple\'s official support page for more information.',
                     'Open Apple\'s Support page concerning Enterprise Apps?'
                 ].join('\n\n'))) {
